# SalesOps

./: .gitignore  02-Dictionnaire-de-variables.docx  03-Processus-vente-AS-IS.md  04-Modele-de-donnees.excalidraw  J3-Strategie-conception.md  J4-Realisation-pitch.md  MoveUp.md  README.md  index.html  pyproject.toml  web_body.html
.claude/: settings.json
.streamlit/: config.toml
Data base/: 05-Donnees-ACTUELLES-suivi-prospects.xlsx  06-Donnees-CIBLE.xlsx  07-Base-adherents.xlsx
Data base/data-cible/: dim_membre.csv  fact_acquisition.csv  fact_audience.csv  fact_pages.csv  fact_paiement.csv
J1/: 01-Dossier-entreprise.md  02-Dictionnaire-de-variables.docx  02-Dictionnaire-de-variables.md  02b-Dictionnaire-de-donnees-ACTUEL.md  06-Donnees-CIBLE-README.md
dashboard/: README.md  app.py  data.py  index.html  requirements.txt  test_aud.py
data-cible/: base_adherents.csv  dim_utilisateur.csv  fact_abonnement.csv  fact_checkin.csv  fact_interaction.csv  fact_lead.csv  fact_newsletter.csv  fact_rdv.csv
scratch/: dump_html.py  extract.py  gen_tab.py  tab_code.py  update_index_html.py
